# openleads

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  automation.py  lead_engine.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
data/: sample_leads.csv
docs/: architecture.md  automation.md  deliverability.md  finding.md  how-it-works.md  quickstart.md  responsible-use.md  sending.md  sources.md  web.md
docs/superpowers/specs/: 2026-06-09-openleads-v2-design.md  2026-06-10-openleads-v3-design.md  2026-06-12-v3.5-design.md  2026-06-12-v4.0-design.md
npm/: README.md  package.json
openleads/: __init__.py  __main__.py  _http.py  assistant.py  campaign.py  chat.py  cli.py  config.py  config_cmd.py  db.py  doctor.py  engine.py  enrich.py  federation.py  intent.py  models.py  settings.py  ui.py  writers.py
openleads/automate/: __init__.py  crm.py  dedupe.py  exporters.py  pipeline.py  recipes.py  scheduler.py  sendtime.py  templates.py  watch.py
openleads/cache/: __init__.py  store.py
openleads/discover/: __init__.py  geo.py  people.py
openleads/emails/: __init__.py  gravatar.py  groundtruth.py  mx.py  netcheck.py  patterns.py  permute.py  resolve.py  score.py  smtp_verify.py
openleads/outreach/: __init__.py  compose.py  deliverability.py  inbox.py  providers.py  sender.py  sequences.py
openleads/sources/: __init__.py  base.py  companies.py  domains.py  edgar.py  github.py  hn.py  local.py  npi.py  openalex.py  producthunt.py  yc.py
openleads/web/: __init__.py  api.py  server.py
openleads/web/static/: app.js  index.html  styles.css
site/: app.js  build_docs.py  index.html  styles.css
site/docs/: architecture.html  automation.html  deliverability.html  docs.css  docs.js  finding.html  how-it-works.html  index.html  quickstart.html  responsible-use.html  sending.html  sources.html  web.html
tests/: conftest.py  test_assistant.py  test_automate.py  test_automation_v4.py  test_cache.py  test_campaign.py  test_chat.py  test_companies_edgar.py  test_deliverability.py  test_domains_source.py  test_emails.py  test_engine.py  test_engine_v35.py  test_enrich.py  test_federation.py  test_github_quality.py  test_hn.py  test_intent.py  test_local_source.py  test_new_sources.py  test_openleads.py  test_outreach.py  test_people_discovery.py  test_scheduler_v35.py  test_sendtime.py  test_sent_folder.py  test_settings_cli.py  test_sources.py  test_web.py
