[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openleads"
version = "3.5.0"
description = "Free, open-source Apollo/Hunter alternative: find anyone, verify deliverably, write and send cold email that lands — local-first, keyless, $0. Ground-truth email harvesting, on-device send-time automation, IMAP Sent-folder visibility, a free natural-language campaign assistant, and a Claude-Code-style CLI."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "Samyar Shafiee" }]
keywords = [
  "lead-generation", "email-finder", "apollo-alternative", "sales", "cli",
  "prospecting", "cold-email", "smtp-verification", "deliverability", "yc",
  "founders", "osint", "doctors", "researchers", "developers", "data-enrichment",
  "email-deliverability", "cold-outreach", "local-first",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business",
  "Topic :: Communications :: Email",
  "Operating System :: OS Independent",
]
dependencies = []  # core engine + library are stdlib-only

[project.optional-dependencies]
chat = ["rich>=13.0", "prompt_toolkit>=3.0"]
campaign = ["requests>=2.31.0", "python-dotenv>=1.0.0"]
outreach = ["requests>=2.31.0", "python-dotenv>=1.0.0"]
# The web dashboard server is stdlib-only; this extra just pulls the chat niceties.
web = ["rich>=13.0", "prompt_toolkit>=3.0"]
dev = ["pytest>=7.0", "ruff>=0.4.0", "build>=1.0", "twine>=5.0"]
all = ["rich>=13.0", "prompt_toolkit>=3.0", "requests>=2.31.0", "python-dotenv>=1.0.0"]

[project.scripts]
openleads = "openleads.cli:main"

[project.urls]
Homepage = "https://github.com/Samyrrrrrr990/openleads"
Repository = "https://github.com/Samyrrrrrr990/openleads"
Issues = "https://github.com/Samyrrrrrr990/openleads/issues"
Changelog = "https://github.com/Samyrrrrrr990/openleads/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["openleads*"]

[tool.setuptools]
# Ship the v1 back-compat shims as importable top-level modules too.
py-modules = ["lead_engine", "automation"]

[tool.setuptools.package-data]
# Ship the pre-built local dashboard (no Node/build needed by end users).
"openleads.web" = ["static/*", "static/**/*"]

[tool.ruff]
line-length = 110
target-version = "py38"

[tool.ruff.lint]
extend-select = ["I"]  # import sorting
ignore = ["E402"]
